--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -35,7 +35,7 @@
         tools:layout="@layout/fragment_playlists" />
     <fragment
         android:id="@+id/favoritesFragment"
-        android:name="com.example.playlistmaker.media.ui.FavoritesFragment"
+        android:name="com.example.playlistmaker.media.ui.FavoriteTracksFragment"
         android:label="fragment_favorites"
-        tools:layout="@layout/fragment_favorites" />
+        tools:layout="@layout/fragment_favorite_tracks" />
 </navigation>
