--- a/app/src/main/res/layout/fragment_new_playlist.xml
+++ b/app/src/main/res/layout/fragment_new_playlist.xml
@@ -69,7 +69,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/playlist_name"
-            android:lines="1"
+            android:inputType="textCapWords"
+            android:maxLines="1"
             android:paddingStart="@dimen/margin_16"
             android:paddingTop="@dimen/margin_18"
             android:paddingBottom="@dimen/margin_18" />
@@ -94,7 +95,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/playlist_description"
-            android:lines="1"
+            android:inputType="textCapWords"
+            android:maxLines="1"
             android:paddingStart="@dimen/padding_16"
             android:paddingTop="@dimen/margin_18"
             android:paddingBottom="@dimen/margin_18" />
